CMPE 50 labs/C-workspace/.metadata/.plugins/org.eclipse.cdt.ui/Char_Convert.build.log
23:36:29 **** Incremental Build of configuration Debug for project Char_Convert ****
make all 
Building file: ../src/Char_Convert.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Char_Convert.d" -MT"src/Char_Convert.d" -o "src/Char_Convert.o" "../src/Char_Convert.cpp"
../src/Char_Convert.cpp:20:14: error: comparison between pointer and integer ('char *' and 'int')
                if (random >= 97 && random <= 122)
                    ~~~~~~ ^  ~~
../src/Char_Convert.cpp:20:30: error: comparison between pointer and integer ('char *' and 'int')
                if (random >= 97 && random <= 122)
                                    ~~~~~~ ^  ~~~
../src/Char_Convert.cpp:25:9: error: cannot initialize return object of type 'char' with an lvalue of type 'char *'
        return random;
               ^~~~~~
../src/Char_Convert.cpp:32:14: warning: format specifies type 'char *' but the argument has type 'char (*)[300]' [-Wformat]
        scanf("%s", &randomString);
               ~~   ^~~~~~~~~~~~~
1 warning and 3 errors generated.
make: *** [src/Char_Convert.o] Error 1

23:36:29 Build Finished (took 276ms)

